<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:weightSum="3"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/information_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom_info_label"
        android:layout_marginTop="@dimen/margin_top_info_label"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/information"
        android:textColor="@color/storm_grey"
        android:textSize="@dimen/information_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_marginEnd="@dimen/table_margin_right"
        android:layout_marginStart="@dimen/table_margin_start"
        android:paddingTop="@dimen/padding_top_table_row"
        android:paddingBottom="@dimen/padding_button_table_row"
        android:layout_weight="1">

    <TextView
        android:id="@+id/textViewUnderWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underweight"
        android:layout_marginStart="@dimen/margin_left_underweight"
        android:layout_weight="1"
        android:textColor="@color/underWeight"
        android:textSize="@dimen/text_size_instruction_label" />

    <TextView
        android:id="@+id/textViewNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal"
        android:layout_weight="1"
        android:textColor="@color/normal"
        android:gravity="center"
        android:textSize="@dimen/text_size_instruction_label"
        app:layout_constraintEnd_toStartOf="@+id/textViewOverWeight"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/textViewUnderWeight"
        app:layout_constraintTop_toBottomOf="@+id/information_label" />

    <TextView
        android:id="@+id/textViewOverWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/over_weight"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:gravity="end"
        android:textColor="@color/overWeight"
        android:textSize="@dimen/text_size_instruction_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/information_label" />

    </TableRow>


    <TableRow
        android:id="@+id/tableRowScale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="@dimen/padding_top_table_row"
        android:paddingBottom="@dimen/padding_button_table_row"
        android:layout_marginEnd="@dimen/margin_end_table_row"
        android:layout_marginStart="@dimen/margin_start_table_row"
        android:weightSum="3">

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/padding_top_table_row"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:layout_marginStart="@dimen/padding_button_table_row" />


        <View
            android:id="@+id/viewNormalScale"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/padding_button_table_row"
            android:layout_weight="1"
            android:background="@color/normal" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/padding_button_table_row"
            android:layout_weight="1"
            android:background="@drawable/shape_right"
            android:layout_marginEnd="@dimen/padding_button_table_row" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRowScaleValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_end_table_row"
        android:layout_marginStart="@dimen/margin_start_table_row"
        android:weightSum="4">

        <TextView
            android:id="@+id/textViewUnderWeightValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/text_view_underweight"
            android:layout_weight="1"
            android:textSize="@dimen/underweight_info_text_view_size"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewNormalValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_normal_min"
            android:paddingEnd="@dimen/margin_end_table_row"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="@dimen/normal_min_text_view" />

        <TextView
            android:id="@+id/textViewNormalUpperValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/normal_weight_info"
            android:textSize="@dimen/normal_weight_info_text_size" />

        <TextView
            android:id="@+id/textViewOverLoadValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingEnd="@dimen/padding_end_over_load_value"
            android:text="@string/overweight_info"
            android:textSize="@dimen/overweight_info_text_size" />

    </TableRow>


</LinearLayout>