<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/result_nested_card_elevation"
    android:background="@drawable/down_shadow"
    android:layout_marginTop="@dimen/margin_top_result_nested_card"
    android:layout_marginStart="@dimen/margin_left_result_nested_card"
    android:layout_marginEnd="@dimen/margin_right_result_nested_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/bmi_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_result_margin_start"
            android:layout_marginTop="@dimen/bmi_result_margin_top"
            android:layout_marginBottom="@dimen/bmi_result_margin_bottom"
            tools:text="@string/demo_result_value"
            android:textColor="@color/safety_orange"
            android:textSize="@dimen/result_text_size"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.362" />

        <TextView
            android:id="@+id/bmi_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_label_margin_start"
            android:layout_marginTop="@dimen/bmi_label_margin_top"
            android:text="@string/bmi"
            android:textSize="@dimen/result_text_view_bmi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/bmi_result"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bmi_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bmi_status_margin_start"
            android:gravity="center"
            android:text="@string/normal"
            android:textColor="@color/green"
            android:textSize="@dimen/status_text_view_size"
            app:layout_constraintStart_toEndOf="@+id/bmi_result"
            app:layout_constraintTop_toBottomOf="@+id/bmi_label" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:background="@color/storm_grey"
            android:layout_marginTop="@dimen/view_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmi_status" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/view_height_shadow"
            android:background="@drawable/down_shadow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
